--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
+/target/
+/nbactions.xml
+/nb-configuration.xml
