--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
-/target/
-/nbactions.xml
-/nb-configuration.xml
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+nbactions.xml
+nb-configuration.xml
