--- a/simple-embedded-mvc/pom.xml
+++ b/simple-embedded-mvc/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>eu.agilejava</groupId>
-    <artifactId>simple-embedded</artifactId>
+    <artifactId>simple-embedded-mvc</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>simple-embedded</name>
+    <name>simple-embedded-mvc</name>
 
     <parent>
         <groupId>eu.agilejava</groupId>
