--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>simple-embedded-mvc</module>
         <module>simple-embedded-jsf</module>
+        <module>form-embedded-mvc</module>
     </modules>
 
     <repositories>
