Adjust Demo to Java EE 8

--- a/simple-embedded-mvc/pom.xml
+++ b/simple-embedded-mvc/pom.xml
@@ -18,18 +18,12 @@
     <dependencies>
         <dependency>
             <groupId>javax</groupId>
-            <artifactId>javaee-web-api</artifactId>
-            <version>7.0</version>
+            <artifactId>javaee-api</artifactId>
+            <version>8.0</version>
             <scope>provided</scope>
         </dependency>
         
-        <!-- Needed until Java EE 8-->
-        <dependency>
-            <groupId>org.omnifaces</groupId>
-            <artifactId>soteria</artifactId>
-            <version>1.0-m01-SNAPSHOT</version>
-        </dependency>
-        
+        <!-- Needed until Java EE 8-->        
         <dependency>
             <groupId>javax.mvc</groupId>
             <artifactId>javax.mvc-api</artifactId>
