--- a/form-mvc/pom.xml
+++ b/form-mvc/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>eu.agilejava</groupId>
-    <artifactId>simple-embedded-jsf</artifactId>
+    <artifactId>form-mvc</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>simple-embedded-jsf</name>
+    <name>form-mvc</name>
 
     <parent>
         <groupId>eu.agilejava</groupId>
@@ -19,15 +19,22 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
-            <version>7.0</version>
+            <version>8.0</version>
             <scope>provided</scope>
         </dependency>
         
         <!-- Needed until Java EE 8-->
+        
         <dependency>
-            <groupId>org.omnifaces</groupId>
-            <artifactId>soteria</artifactId>
-            <version>1.0-m01-SNAPSHOT</version>
+            <groupId>javax.mvc</groupId>
+            <artifactId>javax.mvc-api</artifactId>
+            <version>1.0-edr2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.glassfish.ozark</groupId>
+            <artifactId>ozark</artifactId>
+            <version>1.0.0-m02</version>
         </dependency>
         
     </dependencies>
