--- a/simple-jsf/pom.xml
+++ b/simple-jsf/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>eu.agilejava</groupId>
-    <artifactId>form-embedded-mvc</artifactId>
+    <artifactId>simple-jsf</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>form-embedded-mvc</name>
+    <name>simple-jsf</name>
 
     <parent>
         <groupId>eu.agilejava</groupId>
@@ -21,20 +21,6 @@
             <artifactId>javaee-web-api</artifactId>
             <version>8.0</version>
             <scope>provided</scope>
-        </dependency>
-        
-        <!-- Needed until Java EE 8-->
-        
-        <dependency>
-            <groupId>javax.mvc</groupId>
-            <artifactId>javax.mvc-api</artifactId>
-            <version>1.0-edr2</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.glassfish.ozark</groupId>
-            <artifactId>ozark</artifactId>
-            <version>1.0.0-m02</version>
         </dependency>
         
     </dependencies>
