--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,26 @@
         <module>form-mvc</module>
     </modules>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>javax.mvc</groupId>
+                <artifactId>javax.mvc-api</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>       
+            <dependency>
+                <groupId>org.mvc-spec.ozark</groupId>
+                <artifactId>ozark-core</artifactId>
+                <version>1.0.0-m03-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mvc-spec.ozark</groupId>
+                <artifactId>ozark-jersey</artifactId>
+                <version>1.0.0-m03-SNAPSHOT</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <repositories>
         <repository>
             <id>oss-sonatype</id>
