--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,12 @@
     </properties>
    
     <modules>
+        <module>basic-mvc</module>
         <module>simple-mvc</module>
-        <module>simple-jsf</module>
         <module>form-mvc</module>
+        <module>form-db-mvc</module>
+        <module>simple-jsf</module>
+        <module>simple-rest</module>
     </modules>
 
     <dependencyManagement>
@@ -27,17 +30,17 @@
             <dependency>
                 <groupId>javax.mvc</groupId>
                 <artifactId>javax.mvc-api</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>1.0-pr</version>
             </dependency>       
             <dependency>
                 <groupId>org.mvc-spec.ozark</groupId>
                 <artifactId>ozark-core</artifactId>
-                <version>1.0.0-m03-SNAPSHOT</version>
+                <version>1.0.0-m03</version>
             </dependency>
             <dependency>
                 <groupId>org.mvc-spec.ozark</groupId>
                 <artifactId>ozark-jersey</artifactId>
-                <version>1.0.0-m03-SNAPSHOT</version>
+                <version>1.0.0-m03</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
