--- a/basic-mvc/pom.xml
+++ b/basic-mvc/pom.xml
@@ -27,6 +27,7 @@
            <groupId>org.glassfish.soteria</groupId>
            <artifactId>javax.security.enterprise</artifactId>
            <version>1.0</version>
+           <scope>provided</scope>
         </dependency>
         
         <dependency>
