--- a/simple-jsf/pom.xml
+++ b/simple-jsf/pom.xml
@@ -17,12 +17,11 @@
        
     <dependencies>
         <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-web-api</artifactId>
-            <version>8.0</version>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
+            <version>9.1.0</version>
             <scope>provided</scope>
         </dependency>
-        
     </dependencies>
    
 </project>
