--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,13 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <netbeans.hint.license>mit</netbeans.hint.license>
     </properties>
    
     <modules>
-        <module>basic-mvc</module>
         <module>simple-mvc</module>
         <module>form-mvc</module>
         <module>form-db-mvc</module>
@@ -28,32 +27,27 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>javax.mvc</groupId>
-                <artifactId>javax.mvc-api</artifactId>
-                <version>1.0-pr</version>
+                <groupId>jakarta.mvc</groupId>
+                <artifactId>jakarta.mvc-api</artifactId>
+                <version>2.0.0</version>
             </dependency>       
-            <dependency>
-                <groupId>org.mvc-spec.ozark</groupId>
-                <artifactId>ozark-core</artifactId>
-                <version>1.0.0-m03</version>
-            </dependency>
-            <dependency>
-                <groupId>org.mvc-spec.ozark</groupId>
-                <artifactId>ozark-jersey</artifactId>
-                <version>1.0.0-m03</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
-    <repositories>
-        <repository>
-            <id>oss-sonatype</id>
-            <name>oss-sonatype</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>3.3.2</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
 
 </project>
