--- a/simple-rest/pom.xml
+++ b/simple-rest/pom.xml
@@ -17,12 +17,12 @@
        
     <dependencies>
         <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>8.0</version>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
+            <version>9.1.0</version>
             <scope>provided</scope>
         </dependency>
-        
+
     </dependencies>
    
 </project>
