--- a/simple-jsf/pom.xml
+++ b/simple-jsf/pom.xml
@@ -14,7 +14,12 @@
         <artifactId>security-samples</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-       
+
+    <build>
+        <finalName>simple-jsf</finalName>
+    </build>
+
+
     <dependencies>
         <dependency>
             <groupId>jakarta.platform</groupId>
